Archive2/99/7e6debe4fe3ad8/output
main.cpp:1:8: error: function cannot return array type 'int [5]'
int foo()[5] {}
       ^
1 error generated.
